--- a/views/book_detail.pug
+++ b/views/book_detail.pug
@@ -1,20 +1,20 @@
 extends layout.pug
 
 block content
-  h1 Book: A Brief History of Time
+  h1 Book: #{book.title}
   form
     p
       label(for='title') Title
-      input#title(type='text', value='A Brief History of Time')
+      input#title(type='text', name='title', value=book.title)
     p
       label(for='author') Author
-      input#author(type='text', value='Stephen Hawking')
+      input#author(type='text', name='author', value=book.author)
     p
       label(for='genre') Genre
-      input#genre(type='text', value='Non Fiction')
+      input#genre(type='text', name='genre', value=book.genre)
     p
       label(for='first_published') First Published
-      input#first_published(type='text', value='1988')
+      input#first_published(type='text', name='first_published', value=book.first_published)
     p
       input(type='submit', value='Update')
   h2 Loan History
@@ -28,13 +28,15 @@ block content
         th Returned on
         th Action
     tbody
+    each loan in loans
       tr
         td
-          a(href='book_detail') A Brief History of Time
+          a(href='book_detail') #{book.title}
         td
-          a(href='patron_detail') Andrew Chalkley
-        td 2015-12-12
-        td 2015-12-19
+          a(href='patron_detail') #{loan.patron_id}
+        td #{loan.loaned_on}
+        td #{loan.return_by}
+        td #{loan.returned_on}
         td
-        td
-          a.button(href='return_book') Return Book
+          if !loan.returned_on
+            a.button(href='return_book') Return Book
