--- a/views/all_loans.pug
+++ b/views/all_loans.pug
@@ -21,52 +21,15 @@ block content
         th Returned on
         th Action
     tbody
+    each loan in loans
       tr
         td
-          a(href='book_detail') Emma
+          a(href=`book_detail?id=${loan.book_id}`) #{loan.book_title}
         td
-          a(href='patron_detail') Dave McFarland
-        td 2015-12-10
-        td 2020-10-20
+          a(href=`patron_detail?id=${loan.patron_id}`) #{loan.patron_name}
+        td #{loan.loaned_on}
+        td #{loan.return_by}
+        td #{loan.returned_on}
         td
-        td
-          a.button(href='return_book') Return Book
-      tr
-        td
-          a(href='book_detail') Harry Potter and the Goblet of Fire
-        td
-          a(href='patron_detail') Andrew Chalkley
-        td 2015-12-11
-        td 2015-12-18
-        td
-        td
-          a.button(href='return_book') Return Book
-      tr
-        td
-          a(href='book_detail') A Brief History of Time
-        td
-          a(href='patron_detail') Andrew Chalkley
-        td 2015-12-12
-        td 2015-12-19
-        td
-        td
-          a.button(href='return_book') Return Book
-      tr
-        td
-          a(href='book_detail') The Universe in a Nutshell
-        td
-          a(href='patron_detail') Alena Holligan
-        td 2015-12-13
-        td 2015-12-20
-        td
-        td
-          a.button(href='return_book') Return Book
-      tr
-        td
-          a(href='book_detail') The Martian
-        td
-          a(href='patron_detail') Michael Poley
-        td 2015-12-13
-        td 2015-12-20
-        td 2015-12-17
-        td
+          if !loan.returned_on
+            a.button(href=`return_book?id=${loan.loan_id}`) Return Book
