--- a/views/patron_detail.pug
+++ b/views/patron_detail.pug
@@ -1,26 +1,26 @@
 extends layout.pug
 
 block content
-  h1 Patron: Andrew Chalkley
+  h1 Patron: #{patron.first_name} #{patron.last_name}
   form
     p
       label(for='first_name') First Name
-      input#first_name(type='text', value='Andrew')
+      input#first_name(type='text', value=patron.first_name)
     p
       label(for='last_name') Last Name
-      input#last_name(type='text', value='Chalkley')
+      input#last_name(type='text', value=patron.last_name)
     p
       label(for='address')  Address
-      input#address(type='text', value='1234 NE 20st St')
+      input#address(type='text', value=patron.address)
     p
       label(for='email') Email
-      input#email(type='text', value='andrew.chalkley@teamtreehouse.com')
+      input#email(type='text', value=patron.email)
     p
       label(for='library_id') Library ID
-      input#library_id(type='text', value='MCL1001')
+      input#library_id(type='text', value=patron.library_id)
     p
       label(for='zip_code') Zip Code
-      input#zip_code(type='text', value='90210')
+      input#zip_code(type='text', value=patron.zip_code)
     p
       input(type='submit', value='Update')
   h2 Loan History
@@ -35,22 +35,14 @@ block content
         th Action
     tbody
       tr
+      each loan in loans
         td
-          a(href='book_detail') Harry Potter and the Goblet of Fire
+          a(href='book_detail') #{loan.book_id}
         td
-          a(href='patron_detail') Andrew Chalkley
-        td 2015-12-11
-        td 2015-12-18
+          a(href='patron_detail') #{loan.patron_id}
+        td #{loan.loaned_on}
+        td #{loan.return_by}
+        td #{loan.returned_on}
         td
-        td
-          a.button(href='return_book') Return Book
-      tr
-        td
-          a(href='book_detail') A Brief History of Time
-        td
-          a(href='patron_detail') Andrew Chalkley
-        td 2015-12-12
-        td 2015-12-19
-        td
-        td
-          a.button(href='return_book') Return Book
+          if !loan.returned_on
+            a.button(href='return_book') Return Book
