--- a/views/all_loans.pug
+++ b/views/all_loans.pug
@@ -11,25 +11,4 @@ block content
     a(href='overdue_loans') Overdue
     |  
     a(href='checked_loans') Checked Out
-  table
-    thead
-      tr
-        th Book
-        th Patron 
-        th Loaned on
-        th Return by 
-        th Returned on
-        th Action
-    tbody
-    each loan in loans
-      tr
-        td
-          a(href=`book_detail?id=${loan.book_id}`) #{loan.book_title}
-        td
-          a(href=`patron_detail?id=${loan.patron_id}`) #{loan.patron_name}
-        td #{loan.loaned_on}
-        td #{loan.return_by}
-        td #{loan.returned_on}
-        td
-          if !loan.returned_on
-            a.button(href=`return_book?id=${loan.loan_id}`) Return Book
+  include includes/loans.pug
