--- a/views/all_patrons.pug
+++ b/views/all_patrons.pug
@@ -5,21 +5,5 @@ block content
   p
   a.button(href='new_patron') Create New Patron
   p
-  table
-    thead
-      tr
-        th Name 
-        th Address
-        th Email
-        th Library ID
-        th Zip
-    tbody
-    each patron in patrons
-      tr
-        td
-          a(href=`patron_detail?id=${patron.id}`) #{patron.first_name} #{patron.last_name}
-        td #{patron.address}
-        td #{patron.email}
-        td #{patron.library_id}
-        td #{patron.zip_code}
+  include includes/patrons.pug
         
