--- a/views/book_detail.pug
+++ b/views/book_detail.pug
@@ -2,7 +2,7 @@ extends layout.pug
 
 block content
   h1 Book: #{book.title}
-  form
+  form(method='post')
     p
       label(for='title') Title
       input#title(type='text', name='title', value=book.title)
@@ -18,25 +18,4 @@ block content
     p
       input(type='submit', value='Update')
   h2 Loan History
-  table
-    thead
-      tr
-        th Book
-        th Patron 
-        th Loaned on
-        th Return by 
-        th Returned on
-        th Action
-    tbody
-    each loan in loans
-      tr
-        td
-          a(href='book_detail') #{book.title}
-        td
-          a(href='patron_detail') #{loan.patron_id}
-        td #{loan.loaned_on}
-        td #{loan.return_by}
-        td #{loan.returned_on}
-        td
-          if !loan.returned_on
-            a.button(href='return_book') Return Book
+  include includes/loans.pug
