--- a/views/patron_detail.pug
+++ b/views/patron_detail.pug
@@ -2,7 +2,7 @@ extends layout.pug
 
 block content
   h1 Patron: #{patron.first_name} #{patron.last_name}
-  form
+  form(method='post')
     p
       label(for='first_name') First Name
       input#first_name(type='text', value=patron.first_name)
@@ -24,25 +24,4 @@ block content
     p
       input(type='submit', value='Update')
   h2 Loan History
-  table
-    thead
-      tr
-        th Book
-        th Patron 
-        th Loaned on
-        th Return by 
-        th Returned on
-        th Action
-    tbody
-      tr
-      each loan in loans
-        td
-          a(href='book_detail') #{loan.book_id}
-        td
-          a(href='patron_detail') #{loan.patron_id}
-        td #{loan.loaned_on}
-        td #{loan.return_by}
-        td #{loan.returned_on}
-        td
-          if !loan.returned_on
-            a.button(href='return_book') Return Book
+  include includes/loans.pug
