--- a/views/includes/books.pug
+++ b/views/includes/books.pug
@@ -1,15 +1,16 @@
+include search.pug
 table
-    thead
-      tr
-        th Title
-        th Author
-        th Genre
-        th Year Released
-    tbody
-    each book in books
-      tr
-        td
-          a(href=`book_detail?id=${book.id}`) #{book.title}
-        td #{book.author}
-        td #{book.genre}
-        td #{book.first_published}
+  thead
+    tr
+      th Title
+      th Author
+      th Genre
+      th Year Released
+  tbody
+  each book in books
+    tr
+      td
+        a(href=`book_detail?id=${book.id}`) #{book.title}
+      td #{book.author}
+      td #{book.genre}
+      td #{book.first_published}
