--- a/views/book_detail.pug
+++ b/views/book_detail.pug
@@ -1,21 +1,26 @@
 extends layout.pug
 
 block content
-  h1 Book: #{book.title}
+  h1 Book: #{title}
   form(method='post')
     p
       label(for='title') Title
-      input#title(type='text', name='title', value=book.title)
+      input#title(type='text', name='title', value=title)
+      span.error
+        | #{error_title}
     p
       label(for='author') Author
-      input#author(type='text', name='author', value=book.author)
+      input#author(type='text', name='author', value=author)
+      span.error
+        | #{error_author}
     p
       label(for='genre') Genre
-      input#genre(type='text', name='genre', value=book.genre)
+      input#genre(type='text', name='genre', value=genre)
+      span.error
+        | #{error_genre}
     p
       label(for='first_published') First Published
-      input#first_published(type='text', name='first_published', value=book.first_published)
+      input#first_published(type='text', name='first_published', value=first_published)
     p
       input(type='submit', value='Update')
-  h2 Loan History
   include includes/loans.pug
