--- a/views/home.pug
+++ b/views/home.pug
@@ -12,9 +12,9 @@ block content
         li
           a(href='all_books') List All
         li
-          a(href='/books?filter=overdue') List Overdue
+          a(href='/overdue_books') List Overdue
         li
-          a(href='/books?filter=checked_out') List Checked Out
+          a(href='/checked_books') List Checked Out
     li
       | Patrons
       ul
