--- a/views/new_book.pug
+++ b/views/new_book.pug
@@ -5,15 +5,21 @@ block content
   form(method='post')
     p
       label(for='title') Title
-      input#title(type='text', name='title')
+      input#title(type='text', name='title', value=title)
+      span.error
+        | #{error_title}
     p
       label(for='author') Author
-      input#author(type='text', name='author')
+      input#author(type='text', name='author', value=author)
+      span.error
+        | #{error_author}
     p
       label(for='genre') Genre
-      input#genre(type='text', name='genre')
+      input#genre(type='text', name='genre', value=genre)
+      span.error
+        | #{error_genre}
     p
       label(for='first_published') First Published
-      input#first_published(type='text', name='first_published')
+      input#first_published(type='text', name='first_published', value=first_published)
     p
       input(type='submit', value='Create New Book')
