--- a/views/all_books.pug
+++ b/views/all_books.pug
@@ -11,5 +11,7 @@ block content
     a(href='overdue_books') Overdue
     |  
     a(href='checked_books') Checked Out
+  include includes/search.pug
   include includes/books.pug
+  include includes/pagination.pug
     
