--- a/views/checked_books.pug
+++ b/views/checked_books.pug
@@ -11,4 +11,6 @@ block content
     a(href='overdue_books') Overdue
     |  
     a(href='checked_books') Checked Out
+  include includes/search.pug
   include includes/books.pug
+  include includes/pagination.pug
